movie-recommender-frontend/src/components/ResultTable/ResultTable.css
.result__container {
  margin-top: 3rem;
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  flex-direction: column;
}

.table__scroll-wrapper {
  overflow-x: auto;
  width: 100%;
}

/* Make table layout fixed and scrollable if too wide */
.result__table {
  width: 100%;
  min-width: 600px; /* Ensure horizontal scrolling on small screens */
  border-collapse: collapse;
  font-size: 14px;
  table-layout: fixed;
}

.result__table thead {
  background-color: #5995fd;
  color: white;
}

.result__table th,
.result__table td {
  border: 1px solid #ddd;
  padding: 12px 16px;
  text-align: center;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.result__table tbody tr:nth-child(even) {
  background-color: #f3f8ff;
}

.result__table tbody tr:nth-child(odd) {
  background-color: #e6f0ff;
}

.result__no-data {
  margin-top: 2rem;
  text-align: center;
  color: #2c3e50;
}

.pagination__controls {
  margin-top: 1.5rem;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 16px;
  flex-wrap: wrap;
}

.pagination__page {
  font-weight: 600;
  color: #2c3e50;
  white-space: nowrap;
}

.pagination__button {
  max-width: fit-content;
}

/* Mobile responsiveness */
@media screen and (max-width: 500px) {
  .result__table {
    font-size: 12px;
    min-width: 500px;
  }

  .pagination__controls {
    flex-direction: column;
    gap: 8px;
  }

  .pagination__page {
    font-size: 12px;
    font-weight: 400;
  }

  .pagination__button {
    font-size: 12px;
  }
}

